--- a/8-DivaConstraints.tex
+++ b/8-DivaConstraints.tex
@@ -378,13 +378,13 @@ Simply provide \file{./input/data.dat} with additional fifth, sixth \ldots colum
 \example
 \begin{itemize}
 \item
-column 5 contains value 1 for a data point of the year 1975, 2 for 1976, 3 for 1977 and so on
+Column 5 contains value 1 for a data point of the year 1975, 2 for 1976, 3 for 1977 and so on.
 \item
-column 6 contains 1 for a data corresponding to month 01-03, 2 for the month 04-06 and so on
+Column 6 contains 1 for a data corresponding to month 01-03, 2 for the month 04-06 and so on.
 \item
-column 7 contains 1 for day values, 2 for night values
+Column 7 contains 1 for day values, 2 for night values.
 \item
-column 8 contains 1 for points that have a density below 1025~kg/m$^3$, 2 for points that have a density above it.
+Column 8 contains 1 for points that have a density below 1025~kg/m$^3$, 2 for points that have a density above it.
 \end{itemize}
 
 Execute \command{divadetrend ngroups [niterations]}. The parameter {\tt ngroups} specifies that the first {\tt ngroups} will be used for the detrending.
