added example for detrending

--- a/20-DivaPublications.bib
+++ b/20-DivaPublications.bib
@@ -437,9 +437,10 @@
   timestamp = {2011.10.14}
 }
 
-@MISC{GANDIN65,
+@TECHREPORT{GANDIN65,
   author = {L. S. Gandin},
   title = {Objective Analysis of Meteorological Fields},
+  institution = {Israel Program for Scientific Translations},
   year = {1965},
   address = {Jerusalem},
   journal = {Israel Program for Scientific Translations},
@@ -683,7 +684,7 @@
 
 @BOOK{STOR99,
   title = {Statistical analysis in climate research},
-  publisher = {Cambdridge University Press},
+  publisher = {Cambridge University Press},
   year = {1999},
   author = {von Storch, H. and Zwiers, F.},
   pages = {484},
