--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -11,7 +11,7 @@
 
 
 \vspace{.25cm}
-\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \texttt{JRA4} activities. \diva is copyright $\copyright$  2006-2012 by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html}
+\diva is a software developed at the GeoHydrodynamic and Environmental Research (GHER, \url{http://modb.oce.ulg.ac.be/}) group at the University of Liège (\url{http://www.ulg.ac.be})) and that will be further developed for SeaDataNet scientific data products in \texttt{JRA4} activities. \diva is copyright $\copyright$  2006-2012 by the GHER group and is distributed under the terms of the GNU General Public License (GPL): \url{http://www.gnu.org/copyleft/gpl.html} \index{SeaDataNet}
 
 In short, this means that everyone is free to use \diva and to redistribute it on a free basis. \diva is not in the public domain; it is copyrighted and there are restrictions on its distribution (see the license \url{http://www.gnu.org/copyleft/gpl.html} and its associated FAQ \url{http://www.gnu.org/copyleft/gpl-faq.html}). For example, you cannot integrate this version of \diva (in full or in parts) in any \textit{closed-source} software you plan to distribute (commercially or not).
 
@@ -27,6 +27,35 @@ All SeaDataNet products (data and software) are freely distributed to the scient
 \item[\checkmark] The recipient of these data will accept responsibility of informing all data users of these conditions.
 \end{description}
 
+\end{minipage}
+
+\end{center}
+
+\vspace*{\fill}
+
+\newpage
+
+\vspace*{\fill}
+
+\begin{center}
+\begin{minipage}[c]{.85\textwidth}
+%\parskip 0.25cm
+\Large{How to use this guide?}
+%\addcontentsline{toc}{chapter}{Conditions of use}
+\vspace{1cm}
+\normalsize
+
+This \diva User Guide aims to cover all the aspects of the methods: the theory (Part~\ref{part:theory}), the two-dimension version (Part~\ref{part:2Dimplementation}), the climatology production with GODIVA (Part~\label{part:godiva}) and the description of the scripts and the Fortran code (Part~\label{part:appendix}). 
+
+The user who directly wants to perform analysis shall start with Part~\ref{part:2Dimplementation}, which describes the input files and provides examples of realistic, simple runs. The \diva-demecum (Chapter~\ref{18-divademecum}) is particularly useful to have a small summary of all the commands and options.
+
+For more theoretical developments, the user is invited to read Part~\ref{part:theory} as well as the corresponding bibliography.
+
+ 
+
+
+
+\vspace{.25cm}
 \end{minipage}
 
 \end{center}
