--- a/7-DivaError.tex
+++ b/7-DivaError.tex
@@ -118,7 +118,7 @@ Near the boundary, data points influence more easily the analysis because rigidi
 \begin{figure}[htpb]
 \centering
 \includegraphics[width=.7\textwidth,bb=66 206 510 630]{fig4_kernel_bceffect}
-\caption[Analysis in a square domain $[-5,5]\times[-5,5]$ with a point at the centre and another at $(-4.5,0)$.]{Analysis in a square domain $[-5,5]\times[-5,5]$ with a point at the centre and another at $(-4.5,0)$. The signal-to-noise ratio $\snr=1$ for both cases. Note the larger analysis value near the boundary, indicating a larger background variance.
+\caption[Analysis in a square domain with a point at the centre and another at $(-4.5,0)$.]{Analysis in a square domain $[-5,5]\times[-5,5]$ with a point at the centre and another at $(-4.5,0)$. The signal-to-noise ratio $\snr=1$ for both cases. Note the larger analysis value near the boundary, indicating a larger background variance.
 \label{fig:fig4_kernel_bceffect}}
 \end{figure} 
  
