--- a/DivaUserGuide2012.tex
+++ b/DivaUserGuide2012.tex
@@ -26,7 +26,7 @@
 %---------------------------PART 1------------------
 
 \thispagestyle{empty}
-\part{\diva Theory}
+\part{\diva Theory\label{part:theory}}
 
 \input{5-DivaTheory}
 \input{6-DivaParameters}
@@ -37,7 +37,7 @@
 
 %---------------------------PART 2------------------
 \thispagestyle{empty}
-\part{2-D implementation}
+\part{2-D implementation\label{part:2Dimplementation}}
 
 \input{9-DivaGeneral}
 \input{10-DivaPreprocessing}
@@ -50,14 +50,15 @@
 %---------------------------PART 3------------------
 \thispagestyle{empty}
 
-\part{3-D analysis \& climatology production (GODIVA)}
+\part{3-D analysis \& climatology production (GODIVA)\label{part:godiva}}
+
 
 \input{15-3DAnalyses}
 
 
 %---------------------------PART 4------------------
 \thispagestyle{empty}
-\part{Appendix}
+\part{Appendix\label{part:appendix}}
 \appendix
 \input{16-DivaProblems}
 \input{17-DivaScriptCode}
