--- a/14-DivaOnWeb.tex
+++ b/14-DivaOnWeb.tex
@@ -10,7 +10,7 @@ In addition to the usual way of working with \diva (i.e., command line), there a
 \section{\diva-on-web}
 %---------------------
 
-The idea behind \diva-on-web is to provide the possibility to user to perform interpolations with \diva without having to install it on their machine. The web interface suits to single analysis with a relatively low number of data. For climatologies, which requires the repetition of numerous analysis, the use of \diva is necessary.
+The idea behind \diva-on-web is to provide the possibility to user to perform interpolations with \diva without having to install it on their machine. The web interface suits to a single analysis with a relatively low number of data. For climatologies, which requires the repetition of numerous analysis, the use of \diva is necessary.
 
 The server is accessible at: \url{http://gher-diva.phys.ulg.ac.be/web-vis/diva.html} and a complete description is found in \citet{BARTH10}.
 
@@ -78,13 +78,14 @@ The outputs are available in various formats (Fig.~\ref{fig:divaonweb6}): NetCDF
 \caption{\label{fig:divaonweb6}}
 \end{figure}
 
+
 \subsection{Conditions of use}
 %-----------------------------
 
 
 \begin{itemize}
 \item Open to all users without registration.
-\item CPU time and the number of observations is limited per user, in order to guarantee availability to all.
+\item CPU time and the number of observations is limited per user, in order to guarantee availability to all. The current maximum CPU time is 10 minutes and the maximum number of observations is 100000.
 \end{itemize}
 
 
